# frugalAI-ml-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml
mlpipeline/: config.py  gcp.py  gcp_init.py  main.py
mlpipeline/data/: data_processor.py
mlpipeline/model/: model.py  prompt.py
